Fixed horizontal alignment of Container component

--- a/source/components/layout/container/Container.less
+++ b/source/components/layout/container/Container.less
@@ -5,6 +5,7 @@
   flex-shrink: 0;
   width: 90%;
   max-width: 1152px; // 1280px × 90%
+  margin: 0 auto;
   margin-bottom: 1.5rem;
   &:last-child {
     margin-bottom: 0;
